# MDP_STM32

./: .gitignore  .gitmodules  .project  README.md
STM32/Core/Inc/: uart_state_machine.h  uart_state_machine_api.h
STM32/Core/Src/: uart_state_machine.c
stm32/: .cproject  .mxproject  .project  STM32F407VETX_FLASH.ld  stm32 Debug.launch  stm32.ioc  stm_32.ioc
stm32/Core/Inc/: display.h  encoder.h  globals.h  ir_adc.h  main.h  motor.h  move.h  servo.h  stm32f4xx_it.h  uart_state_machine.h  uart_state_machine_api.h
stm32/Core/Src/: display.c  encoder.c  globals.c  ir_adc.c  main.c  motor.c  move.c  servo.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  uart_state_machine.c
stm32/Drivers/IMU/Inc/: IMU.h  IMU_smooth.h
stm32/Drivers/IMU/Src/: IMU.c  IMU_smooth.c
stm32/Drivers/OLED/Inc/: oled.h
stm32/Drivers/OLED/Src/: oled_SC2104.c
stm_32/: .cproject
stm_32/Core/Src/: main.c
tests/: CMakeLists.txt
tests/lib/: CMakeLists.txt
tests/test_state_machine/: CMakeLists.txt  main.c  uart_state_machine.c  uart_state_machine.h  uart_state_machine_api.h
